# frameready

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json
src/frameready/: __init__.py  core.py
tests/: test_core.py
